--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,9 @@
 name: TEST
-
-on: [workflow_dispatch]
-
+on: workflow_dispatch
 jobs:
-  deploy:
-    runs-on: [ubuntu-latest]
+  my-job:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Push to server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }} 
-          script: cd /home/elijah
+      - name: my-step
+        run: echo "Hello World!"
