--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,4 +9,7 @@ jobs:
         run: echo "Hello World!"
       - name: Push to server
         uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+
 
